--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -434,6 +434,7 @@ header-y += msm_audio_aac.h
 header-y += msm_audio_ac3.h
 header-y += msm_audio_acdb.h
 header-y += android_pmem.h
+header-y += android_alarm.h
 header-y += msm_audio_wma.h
 header-y += msm_audio_wmapro.h
 header-y += msm_audio_mvs.h
