--- a/include/uapi/linux/Kbuild
+++ b/include/uapi/linux/Kbuild
@@ -255,6 +255,7 @@ header-y += mroute6.h
 header-y += msdos_fs.h
 header-y += msg.h
 header-y += msm_adc.h
+header-y += msm_dsps.h
 header-y += msm_ipa.h
 header-y += msm_ipc.h
 header-y += mtio.h
