msm: ipa: odu: add ODU_IPA network interface
This change adds support for ODU (Out Door Unit) feature.
ODU feature allows to connect the device to
a Home Gateway using Ethernet-To-USB adapter.

This change includes a new network interface "odu0" and
IPA driver changes for supporting accelerated data path on ODU.

Change-Id: I209fade1bd9b76fb06b30f968d577bb216c19362
Acked-by: Ady Abraham <adya@qti.qualcomm.com>
Signed-off-by: Gidon Studinski <gidons@codeaurora.org>

--- a/drivers/net/ethernet/msm/Kconfig
+++ b/drivers/net/ethernet/msm/Kconfig
@@ -66,3 +66,11 @@ config ECM_IPA
 	depends on IPA
 	help
 	  Allows LAN between Apps and tethered HOST on STD ECM
+
+config ODU_IPA
+	tristate "ODU IPA LAN Driver support"
+	depends on IPA
+	help
+	  Allows LAN between Apps and gateway
+	  connected via Ethernet-to-USB adapter as part
+	  of ODU (Out Door Unit)
