--- a/drivers/net/ethernet/msm/Makefile
+++ b/drivers/net/ethernet/msm/Makefile
@@ -9,3 +9,4 @@ obj-$(CONFIG_MSM_RMNET_BAM) += msm_rmnet_bam.o
 obj-$(CONFIG_MSM_RMNET_SMUX) += msm_rmnet_smux.o
 obj-$(CONFIG_QFEC) += qfec.o
 obj-$(CONFIG_ECM_IPA) += ecm_ipa.o
+obj-$(CONFIG_ODU_IPA) += odu_ipa.o
