--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -160,3 +160,4 @@ obj-$(CONFIG_IPACK_BUS)		+= ipack/
 obj-$(CONFIG_NTB)		+= ntb/
 obj-$(CONFIG_FMC)		+= fmc/
 obj-$(CONFIG_POWERCAP)		+= powercap/
+obj-$(CONFIG_SENSORS)		+= sensors/
