defconfig: msm9625: add CONFIG_ODU_IPA
Enable ODU_IPA Driver which is required
for accelerated data path for ODU feature.

Change-Id: I396619b929859120f33218f3dfaddbfea21c4e0e
Acked-by: Ady Abraham <adya@qti.qualcomm.com>
Signed-off-by: Gidon Studinski <gidons@codeaurora.org>

--- a/arch/arm/configs/msm9625-perf_defconfig
+++ b/arch/arm/configs/msm9625-perf_defconfig
@@ -195,6 +195,7 @@ CONFIG_KS8851=y
 # CONFIG_MSM_RMNET is not set
 CONFIG_MSM_RMNET_WWAN=y
 CONFIG_ECM_IPA=y
+CONFIG_ODU_IPA=y
 # CONFIG_NET_VENDOR_NATSEMI is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
 # CONFIG_NET_VENDOR_SMSC is not set
