arm/dt: 9625: Add GPIO to reset the ODU hub
ODU device currently has HSIC hub with external power.
Due to the need to support remote software reboot,
a support to reset the HSIC hub is also required.
This change adds the GPIO to the platform device in order
to support this.

Change-Id: I4b119c07468403d017a857bc6a067c861c800c95
Signed-off-by: Lena Salman <esalman@codeaurora.org>

--- a/arch/arm/boot/dts/msm9625.dtsi
+++ b/arch/arm/boot/dts/msm9625.dtsi
@@ -1014,6 +1014,12 @@
                 interrupts = <0 1 0>;
         };
 
+	qti,usbnet_ipa {
+		cell-index = <0>;
+		compatible = "qti,usbnet_ipa";
+		qti,hub-reset = <&msmgpio 50 0>;
+	};
+
 };
 
 /include/ "msm-pm8019-rpm-regulator.dtsi"
