arm64: Add soft link to qcom dts files
The goal is to share dts files between arm and arm64.

Change-Id: I967d26d4eb362908a0d322ee7b1951ae7dc14878
Signed-off-by: Michael Bohan <mbohan@codeaurora.org>

--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -6,6 +6,9 @@ dtb-$(CONFIG_ARCH_VEXPRESS) += juno.dtb
 targets += dtbs
 targets += $(dtb-y)
 
+#used for cleaning - not building
+subdir- := qcom
+
 dtbs: $(addprefix $(obj)/, $(dtb-y))
 
 clean-files := *.dtb
