--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -68,6 +68,7 @@ zinstall install: vmlinux
 
 dtbs: scripts
 	$(Q)$(MAKE) $(build)=$(boot)/dts dtbs
+	$(Q)$(MAKE) $(build)=$(boot)/dts/qcom dtbs
 
 PHONY += vdso_install
 vdso_install:
