--- a/arch/arm/configs/msm9625_defconfig
+++ b/arch/arm/configs/msm9625_defconfig
@@ -275,6 +275,8 @@ CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_CI13XXX_MSM=y
 CONFIG_USB_G_ANDROID=y
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_USBNET_IPA_SUPPORT=y
 CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
