net: usb: Add IPA datapath support to USB Ethernet adapters
In order to support high throughput requirements, USB ethernet
adapter datapath can be sent via IPA hardware. This change adds
support for USB ethernet adapter to open a BAM2BAM pipes with
the IPA, and cancel the need for the packets to go through SW.
The control over exception packets shifts to the IPA-ODU
network device, and the usual usbnet device is not used.

Change-Id: I9d3f9cc7efd01508ced9c9a8be6024c8038d7e4d
Signed-off-by: Lena Salman <esalman@codeaurora.org>

--- a/drivers/net/usb/Kconfig
+++ b/drivers/net/usb/Kconfig
@@ -130,6 +130,18 @@ config USB_USBNET
 	  To compile this driver as a module, choose M here: the
 	  module will be called usbnet.
 
+config USB_USBNET_IPA_SUPPORT
+	boolean "Configures USBNET to use BAM2BAM datapath via IPA"
+	depends on USB_USBNET && ARCH_MSM
+	default n
+	help
+	  This option adds support for BAM2BAM datapath for USBNET
+	  devices.
+
+	  This option cancels the functionality of the ethX device and
+	  lets IPA to create the actual networking device. Thus all
+	  the datapath goes via IPA (software or hardware).
+
 config USB_NET_AX8817X
 	tristate "ASIX AX88xxx Based USB 2.0 Ethernet Adapters"
 	depends on USB_USBNET
