--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -64,3 +64,5 @@ obj-$(CONFIG_INPUT_XEN_KBDDEV_FRONTEND)	+= xen-kbdfront.o
 obj-$(CONFIG_INPUT_YEALINK)		+= yealink.o
 obj-$(CONFIG_INPUT_IDEAPAD_SLIDEBAR)	+= ideapad_slidebar.o
 obj-$(CONFIG_SENSORS_MPU6050)		+= mpu6050.o
+obj-$(CONFIG_SENSORS_AKM8963)	+= akm8963.o
+obj-$(CONFIG_SENSORS_AKM09911)		+= akm09911.o
