ARM: msm: add krait l2 accessor functionality
Support is necessary for the Krait clocks.

This functionality is taken from msm-3.10 as of

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -1,3 +1,6 @@
+obj-$(CONFIG_ARCH_MSM_KRAIT) += msm-krait-l2-accessors.o
+
+obj-$(CONFIG_MSM_TIMER) += timer.o
 obj-$(CONFIG_MSM_PROC_COMM) += clock.o
 
 obj-$(CONFIG_MSM_VIC) += irq-vic.o
