qcom: add support for SMEM
This is a snapshot of the SMEM driver as of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -170,6 +170,8 @@ source "drivers/fmc/Kconfig"
 
 source "drivers/phy/Kconfig"
 
+source "drivers/soc/Kconfig"
+
 source "drivers/powercap/Kconfig"
 
 endmenu
