--- a/drivers/soc/Makefile
+++ b/drivers/soc/Makefile
@@ -2,4 +2,5 @@
 # Makefile for the Linux Kernel SOC specific device drivers.
 #
 
+obj-$(CONFIG_ARCH_MSM)		+= qcom/
 obj-$(CONFIG_ARCH_QCOM)		+= qcom/
