ARM: dts: add apq8084 device tree files
This is a snapshot of the apq8084 device tree files and required
snippets as of of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -336,6 +336,9 @@ dtb-$(CONFIG_ARCH_ZYNQ) += zynq-zc702.dtb \
 
 targets += dtbs
 targets += $(dtb-y)
+
+#used for cleaning - not building
+subdir- := qcom
 endif
 
 # *.dtb used to be generated in the directory above. Clean out the
