ARM: msm: add snapshot of mach/gpio.h header
This is a snapshot of arch/arm/mach-msm/include/mach/gpio.h as of
msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -651,6 +651,7 @@ config ARCH_PXA
 config ARCH_MSM
 	bool "Qualcomm MSM (non-multiplatform)"
 	select ARCH_REQUIRE_GPIOLIB
+	select NEED_MACH_GPIO_H
 	select GENERIC_CLOCKEVENTS
 	select SOC_BUS
 	help
