ARM: msm: 8084: add snapshot of gpiomux configuration
This is a snapshot of the 8084 gpio mux configurtion as of msm-3.10
commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -9,6 +9,7 @@ config ARCH_APQ8084
 	select MULTI_IRQ_HANDLER
 	select CPU_V7
 	select HAVE_ARM_ARCH_TIMER
+	select MSM_GPIOMUX
 	select MAY_HAVE_SPARSE_IRQ
 	select SPARSE_IRQ
 	select ARM_HAS_SG_CHAIN
