arm: boot: dts: add 8916/8939 dts snapshot
This is a snapshot of 8916/8939 device trees as of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64:
Enable ONESHOT_SYNC for msm8994")

Signed-off-by: Stephen Boyd <sboyd@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -27,6 +27,26 @@ dtb-$(CONFIG_ARCH_APQ8084) += apq8084-v1.0-old-pwr-grid-liquid.dtb \
 	apq8084-v1.1-old-pwr-grid-mdm9x35-alt-cdp.dtb \
 	apq8084-v1.1-mdm9x35-alt-cdp.dtb \
 	apq8084-v1.1-sbc.dtb
+dtb-$(CONFIG_ARCH_MSM8916) += msm8916-sim.dtb \
+	msm8916-rumi.dtb \
+	msm8916-cdp.dtb \
+	msm8916-cdp-smb1360.dtb \
+	msm8916-mtp.dtb \
+	msm8916-512mb-mtp.dtb \
+	msm8916-mtp-smb1360.dtb \
+	msm8916-512mb-mtp-smb1360.dtb \
+	msm8916-512mb-qrd-skui.dtb \
+	msm8916-qrd-skuh.dtb \
+	msm8916-qrd-skuhf.dtb \
+	msm8916-qrd-skui.dtb \
+	msm8916-512mb-qrd-skuh.dtb \
+	msm8939-sim.dtb \
+	msm8939-rumi.dtb \
+	msm8939-qrd-skuk.dtb \
+	msm8939-cdp.dtb \
+	msm8939-cdp-smb1360.dtb \
+	msm8939-mtp.dtb \
+	msm8939-mtp-smb1360.dtb
 
 targets += dtbs
 targets += $(addprefix ../, $(dtb-y))
