--- a/drivers/platform/msm/Kconfig
+++ b/drivers/platform/msm/Kconfig
@@ -1,6 +1,24 @@
 menu "Qualcomm MSM specific device drivers"
 	depends on ARCH_MSM
 
+config MSM_BUS_SCALING
+	bool "Bus scaling driver"
+	default n
+	help
+		This option enables bus scaling on MSM devices.  Bus scaling
+		allows devices to request the clocks be set to rates sufficient
+		for the active devices needs without keeping the clocks at max
+		frequency when a slower speed is sufficient.
+
+config BUS_TOPOLOGY_ADHOC
+	bool "ad-hoc bus scaling topology"
+	default n
+	help
+		This option enables a driver that can handle adhoc bus topologies.
+		Adhoc bus topology driver allows one to many connections and maintains
+		directionality of connections by explicitly listing device connections
+		thus avoiding illegal routes.
+
 config SPS
 	bool "SPS support"
 	select GENERIC_ALLOCATOR
