--- a/drivers/phy/Kconfig
+++ b/drivers/phy/Kconfig
@@ -79,4 +79,11 @@ config PHY_QCOM_IPQ806X_SATA
 	depends on OF
 	select GENERIC_PHY
 
+config PHY_MSM_SATA
+	tristate "MSM SoC SATA 6Gbps PHY driver"
+	depends on OF && ARCH_MSM
+	select GENERIC_PHY
+	help
+	  Support for 6Gbps SATA PHY on MSM chipsets.
+
 endmenu
