ARM: msm: add snapshot of platsmp/headsmp.S code
This is a snapshot of mach-msm/platsmp.[ch], headsmp.S as of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

It has also been stripped of any SMP operations that are not relevant
for the APQ8084.

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -26,8 +26,13 @@ config ARCH_MSM_KRAIT
 	bool
 	select ARM_L1_CACHE_SHIFT_6
 
+config MSM_SMP
+	bool
+	select HAVE_SMP
+
 config  ARCH_MSM_KRAITMP
 	select ARCH_MSM_KRAIT
+	select MSM_SMP
 	bool
 
 config MSM_SOC_REV_A
