--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -192,6 +192,16 @@ config MSM_OCMEM_POWER_DISABLE
           Enable this configuration if OCMEM is being exclusively
           used as GMEM or OCIMEM.
 
+config MSM_PIL
+	bool "Peripheral image loading"
+	select FW_LOADER
+	default n
+	help
+	  Some peripherals need to be loaded into memory before they can be
+	  brought out of reset.
+
+	  Say yes to support these devices.
+
 config MSM_SCM
 	bool "Secure Channel Manager (SCM) support"
 	default n
