--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -56,6 +56,9 @@ obj-$(CONFIG_CHARGER_BQ24190)	+= bq24190_charger.o
 obj-$(CONFIG_CHARGER_BQ24735)	+= bq24735-charger.o
 obj-$(CONFIG_POWER_AVS)		+= avs/
 obj-$(CONFIG_CHARGER_SMB347)	+= smb347-charger.o
+obj-$(CONFIG_SMB349_USB_CHARGER)   += smb349-charger.o
+obj-$(CONFIG_SMB350_CHARGER)   += smb350_charger.o
+obj-$(CONFIG_SMB135X_CHARGER)   += smb135x-charger.o
 obj-$(CONFIG_CHARGER_TPS65090)	+= tps65090-charger.o
 obj-$(CONFIG_POWER_RESET)	+= reset/
 obj-y				+= qcom/
