platform: msm: Add snapshot of QPNP USB detect
This patch adds the snapshot of the QPNP usb detect driver
as of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64:
Enable ONESHOT_SYNC for msm8994")

Signed-off-by: Andy Gross <agross@codeaurora.org>

--- a/drivers/platform/msm/Kconfig
+++ b/drivers/platform/msm/Kconfig
@@ -62,4 +62,15 @@ config SPS_SUPPORT_NDP_BAM
 	default n
 	help
 	  No-Data-Path BAM is used to improve BAM performance.
+
+config QPNP_USB_DETECT
+	tristate "Qualcomm QPNP USB VBUS Detection"
+	depends on POWER_SUPPLY
+	help
+	  This driver supports external USB VBUS detection circuitry which
+	  can be connected to Qualcomm QPNP PMIC devices.  The driver will
+	  configure a GPIO from the detector's output line and in turn notify
+	  the USB driver of VBUS presence/disconnection using the power_supply
+	  framework.
+
 endmenu
