--- a/drivers/power/reset/Kconfig
+++ b/drivers/power/reset/Kconfig
@@ -22,9 +22,19 @@ config POWER_RESET_GPIO
 
 config POWER_RESET_MSM
 	bool "Qualcomm MSM power-off driver"
-	depends on POWER_RESET && ARCH_QCOM
+	depends on ARCH_MSM || ARCH_QCOM
+	depends on POWER_RESET
 	help
 	  Power off and restart support for Qualcomm boards.
+
+config MSM_DLOAD_MODE
+	bool "Qualcomm download mode"
+	depends on POWER_RESET_MSM
+	help
+		This makes the SoC enter download mode when it resets
+		due to a kernel panic. Note that this doesn't by itself
+		make the kernel reboot on a kernel panic - that must be
+		enabled via another mechanism.
 
 config POWER_RESET_QNAP
 	bool "QNAP power-off driver"
