platform: msm: ipa: add snapshot of ipa driver
This is a snapshot of the ipa driver as of msm-3.10 commit:

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64:
Enable ONESHOT_SYNC for msm8994")

Signed-off-by: Kumar Gala <galak@codeaurora.org>

--- a/include/uapi/linux/Kbuild
+++ b/include/uapi/linux/Kbuild
@@ -187,6 +187,7 @@ header-y += input.h
 header-y += ioctl.h
 header-y += ip.h
 header-y += ip6_tunnel.h
+header-y += ipa_qmi_service_v01.h
 header-y += ip_vs.h
 header-y += ipc.h
 header-y += ipmi.h
@@ -254,6 +255,7 @@ header-y += mroute6.h
 header-y += msdos_fs.h
 header-y += msg.h
 header-y += msm_adc.h
+header-y += msm_ipa.h
 header-y += msm_ipc.h
 header-y += mtio.h
 header-y += n_r3964.h
@@ -333,6 +335,7 @@ header-y += reiserfs_fs.h
 header-y += reiserfs_xattr.h
 header-y += resource.h
 header-y += rfkill.h
+header-y += rmnet_ipa_fd_ioctl.h
 header-y += romfs_fs.h
 header-y += rose.h
 header-y += route.h
