--- a/drivers/platform/msm/Makefile
+++ b/drivers/platform/msm/Makefile
@@ -2,6 +2,7 @@
 # Makefile for the MSM specific device drivers.
 #
 obj-$(CONFIG_MSM_BUS_SCALING) += msm_bus/
+obj-$(CONFIG_IPA) += ipa/
 obj-$(CONFIG_SPS) += sps/
 obj-$(CONFIG_QPNP_POWER_ON) += qpnp-power-on.o
 obj-$(CONFIG_QPNP_USB_DETECT) += qpnp-usbdetect.o
