adv7481: Add Driver code for adv7481
Adding adv7481 driver for mobis-platform.

Change-Id: Ib1178deb3a849f9f5247f17121f9ad22270ad1a3
Signed-off-by: Vinu Deokaran <vinud@codeaurora.org>

--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -279,6 +279,18 @@ config VIDEO_ADV7180
 	  To compile this driver as a module, choose M here: the
 	  module will be called adv7180.
 
+
+config VIDEO_ADV7481
+	tristate "Analog Devices ADV7481 decoder"
+	depends on VIDEO_V4L2 && I2C
+
+	---help---
+	  Support for the Analog Devices ADV7481 video decoder. This
+	  device allows conversion of video data from HDMI and Analog
+	  interfaces to CSI.
+	  To compile this driver as a module, choose M here: the
+	  module will be called adv7481.
+
 config VIDEO_ADV7183
 	tristate "Analog Devices ADV7183 decoder"
 	depends on VIDEO_V4L2 && I2C
@@ -651,6 +663,7 @@ config VIDEO_ADP
 	tristate "AV Chips for ADP Board'"
 	depends on VIDEO_V4L2 && I2C
 	select VIDEO_ADV7180 if VIDEO_HELPER_CHIPS_AUTO
+	select VIDEO_ADV7481 if VIDEO_HELPER_CHIPS_AUTO
 	---help---
 		Enables the AV Bridge chips video4linux drivers for the
 		'ADP Platform'.
