esoc: Add snapshot of ESOC driver
This is a snapshot of the ESOC driver as of msm-3.10
commit:

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Andy Gross <agross@codeaurora.org>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -162,3 +162,6 @@ obj-$(CONFIG_FMC)		+= fmc/
 obj-$(CONFIG_POWERCAP)		+= powercap/
 obj-$(CONFIG_SENSORS)		+= sensors/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
+
+obj-$(CONFIG_ESOC)		+= esoc/
+
