coresight: Add snapshot of CORESIGHT driver
This is a snapshot of the coresight driver as of msm-3.10
commit:

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Note: This driver has an issue if you enabled USB Android Gadget support.  The
usb_qdss function needs to be implemented properly to allow for both the Gadget
and coresight to be enabled together.  Otherwise you get undefined reference to
usb_qdss_open/close

Signed-off-by: Andy Gross <agross@codeaurora.org>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -163,5 +163,6 @@ obj-$(CONFIG_POWERCAP)		+= powercap/
 obj-$(CONFIG_SENSORS)		+= sensors/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
 
+obj-$(CONFIG_CORESIGHT)		+= coresight/
 obj-$(CONFIG_ESOC)		+= esoc/
 
