--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -174,6 +174,8 @@ source "drivers/reset/Kconfig"
 
 source "drivers/fmc/Kconfig"
 
+source "drivers/coresight/Kconfig"
+
 source "drivers/phy/Kconfig"
 
 source "drivers/soc/Kconfig"
