soc: qcom: add snapshot of scm
This is a snapshot of scm as of msm-3.10 commit

acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -49,4 +49,9 @@ config MSM_SMEM
 	  processors in the System on a Chip (SoC) which allows basic
 	  inter-processor communication.
 
+config MSM_SCM
+	bool "Secure Channel Manager (SCM) support"
+	default n
+
+
 endif # ARCH_MSM
