sensors: Rename ADSP driver to SSC and move it to drivers/sensors
Rename sensors ADSP driver to sensors SSC and Move it from
arch/arm/mach-msm to drivers/sensors as drivers/sensors is
the most suitable home for this driver.

Change-Id: I72ae3cfd86157aa2523a4c4d0bf9160f9f2915ae
Signed-off-by: Satya Durga Srinivasu Prabhala <satyap@codeaurora.org>
Signed-off-by: Andy Gross <agross@codeaurora.org>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -161,3 +161,4 @@ obj-$(CONFIG_NTB)		+= ntb/
 obj-$(CONFIG_FMC)		+= fmc/
 obj-$(CONFIG_POWERCAP)		+= powercap/
 obj-$(CONFIG_SENSORS)		+= sensors/
+obj-$(CONFIG_SENSORS_SSC)	+= sensors/
