--- a/arch/arm/boot/dts/qcom/apq8084-ion.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-ion.dtsi
@@ -30,7 +30,7 @@
 			compatible = "qcom,msm-ion-reserve";
 			reg = <8>;
 			qcom,heap-align = <0x1000>;
-			linux,contiguous-region = <&secure_mem>;
+			memory-region = <&secure_mem>;
 			qcom,ion-heap-type = "SECURE_DMA";
 			qcom,default-prefetch-size = <0x6c00000>;
 		};
@@ -38,14 +38,14 @@
 		qcom,ion-heap@23 { /* OTHER PIL HEAP */
 			compatible = "qcom,msm-ion-reserve";
 			reg = <23>;
-			linux,contiguous-region = <&peripheral_mem>;
+			memory-region = <&peripheral_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 
 		qcom,ion-heap@27 { /* QSECOM HEAP */
 			compatible = "qcom,msm-ion-reserve";
 			reg = <27>;
-			linux,contiguous-region = <&qsecom_mem>;
+			memory-region = <&qsecom_mem>;
 			qcom,ion-heap-type = "DMA";
 		};
 	};
