msm: clock-8084: Add DT clock lookup support
Add support to allow the clock lookup from DT. This
change also maintains the table lookup approach if
the DT approach is not used by client drivers.

Change-Id: Ic5fffdfebaef4753d04ac728cb920e8984158c1d
Signed-off-by: Tianyi Gou <tgou@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -15,6 +15,7 @@
 
 #include "skeleton64.dtsi"
 #include <dt-bindings/clock/msm-clocks-krait.h>
+#include <dt-bindings/clock/apq-clocks-8084.h>
 
 / {
 	model = "Qualcomm Technologies, Inc. APQ 8084";
