HACK: apq8084: disable second sdhc instance
The upstream sdhci-msm driver doesn't yet work with removable cards, and
is very noisy about it.  Prevent it from attaching until this works.

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8084-sbc.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-sbc.dtsi
@@ -249,7 +249,7 @@
 };
 
 &sdhc_2 {
-	status = "ok";
+	status = "nok";
 	vdd-supply = <&pma8084_l21>;
 	qcom,vdd-voltage-level = <2950000 2950000>;
 	qcom,vdd-current-level = <200 800000>;
