msm: msm8960_adp_defconfig: edit defconfig to enable adv7481
Edited defconfig file to enable adv7481 driver compilation.

Change-Id: I9dbe12a080643fa6e6d7f8fb55780649f92ab602
Signed-off-by: Vinu Deokaran <vinud@codeaurora.org>

--- a/arch/arm/configs/msm8960_adp_defconfig
+++ b/arch/arm/configs/msm8960_adp_defconfig
@@ -338,6 +338,7 @@ CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_SWITCH=y
 CONFIG_SWITCH_REVERSE=y
 CONFIG_AV_MGR=y
+CONFIG_VIDEO_ADV7481=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_PM8XXX=y
