bluetooth : enable bluetooth modules/drivers in kernel
Enabled bluetooth (protocols, transport drivers etc.), rfkill and
regulator in kernel.

Change-Id: Ie54c8fbf381b769d860b946baff90447efbd6bcf
Signed-off-by: Anantha Krishnan <ananthk@codeaurora.org>
Signed-off-by: Devendra Patel <cdevenp@codeaurora.org>

--- a/arch/arm/configs/mdm9630_defconfig
+++ b/arch/arm/configs/mdm9630_defconfig
@@ -375,3 +375,16 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_MDM9630=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_RTB=y
+CONFIG_RFKILL=y
+CONFIG_REGULATOR=y
+CONFIG_BT=y
+CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM_TTY=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
+CONFIG_BT_HIDP=y
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART_H4=y
+CONFIG_BT_HCIUART_IBS=y
+CONFIG_MSM_BT_POWER=y
