defconfig: msm8916: Enable DEVTMPFS
Enable devtmpfs and devtmpfs mounting configs to allow tmpfs
filesystem to be mounted at /dev. udev will manage device
node permissions subsequently from userspace.

Change-Id: I9983ffa1931afc69de44f627b2121b05e4854edf
Signed-off-by: Viswanath Kraleti <vkraleti@codeaurora.org>

--- a/arch/arm/configs/msm8916-512mb-perf_defconfig
+++ b/arch/arm/configs/msm8916-512mb-perf_defconfig
@@ -526,3 +526,5 @@ CONFIG_CRYPTO_SHA256=y
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_MSM_AVTIMER=y
+CONFIG_DEVTMPFS=y
+CONFIG_DEVTMPFS_MOUNT=y
