--- a/arch/arm/boot/dts/qcom/msm8939-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8939-common.dtsi
@@ -814,13 +814,14 @@
 	};
 
 	blsp1_uart2: serial@78b0000 {
-		compatible = "qcom,msm-lsuart-v14";
+		compatible = "qcom,msm-lsuart-v14", "qcom,msm-uartdm-v1.4",
+				"qcom,msm-uartdm";
 		reg = <0x78b0000 0x200>;
 		interrupts = <0 108 0>;
 		status = "disabled";
 		clocks = <&clock_gcc clk_gcc_blsp1_uart2_apps_clk>,
 			 <&clock_gcc clk_gcc_blsp1_ahb_clk>;
-		clock-names = "core_clk", "iface_clk";
+		clock-names = "core", "iface";
 	};
 
 	i2c_6: i2c@78ba000 { /* BLSP1 QUP6 */
