ARM: dts: apq8084 - update lsuart nodes
Update clk and compatible properties to allow either upstream
or hs_lite driver to be used.

Signed-off-by: Kumar Gala <galak@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -223,14 +223,16 @@
 	};
 
         blsp1_uart1: serial@f991e000 {
-		compatible = "qcom,msm-lsuart-v14";
+		compatible = "qcom,msm-lsuart-v14", "qcom,msm-uartdm-v1.4",
+				"qcom,msm-uartdm";
 		reg = <0xf991e000 0x1000>;
 		interrupts = <0 108 0>;
 		status = "disabled";
 	};
 
 	blsp2_uart1: serial@f995e000 {
-		compatible = "qcom,msm-lsuart-v14";
+		compatible = "qcom,msm-lsuart-v14", "qcom,msm-uartdm-v1.4",
+				"qcom,msm-uartdm";
 		reg = <0xf995e000 0x1000>;
 		interrupts = <0 114 0>;
 		status = "disabled";
@@ -270,7 +272,8 @@
 	};
 
 	serial@f991f000 {
-		compatible = "qcom,msm-lsuart-v14";
+		compatible = "qcom,msm-lsuart-v14", "qcom,msm-uartdm-v1.4",
+				"qcom,msm-uartdm";
 		reg = <0xf991f000 0x1000>;
 		interrupts = <0 109 0>;
 		status = "disabled";
