ARM: msm: add support for the apq8084
APQ8084 board files as of commit
f351234d05725e0cbc9a863177fad661dc296d22 (Merge "ARM: dts: msm: Add
clock node for root enable")

[ updated clk to ]
acdce027751d5a7488b283f0ce3111f873a5816d (Merge "defconfig: arm64: Enable
ONESHOT_SYNC for msm8994")

Also, rename serial clocks to allow for the use of either the upstream
or downstream serial driver.

Signed-off-by: Josh Cartwright <joshc@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1,5 +1,33 @@
 if ARCH_MSM
 
+menu "MSM SoC Type"
+
+config ARCH_APQ8084
+	bool "APQ8084"
+	select ARCH_MSM_KRAITMP
+	select ARM_GIC
+	select MULTI_IRQ_HANDLER
+	select CPU_V7
+	select HAVE_ARM_ARCH_TIMER
+	select MAY_HAVE_SPARSE_IRQ
+	select SPARSE_IRQ
+	select ARM_HAS_SG_CHAIN
+	select CLKDEV_LOOKUP
+	select HAVE_CLK
+	select HAVE_CLK_PREPARE
+	select MSM_IRQ
+	select PINCTRL
+
+endmenu
+
+config ARCH_MSM_KRAIT
+	bool
+	select ARM_L1_CACHE_SHIFT_6
+
+config  ARCH_MSM_KRAITMP
+	select ARCH_MSM_KRAIT
+	bool
+
 config MSM_SOC_REV_A
 	bool
 
