--- a/arch/arm/configs/msm8960_adp_defconfig
+++ b/arch/arm/configs/msm8960_adp_defconfig
@@ -146,6 +146,14 @@ CONFIG_NET_EMATCH_U32=y
 CONFIG_NET_EMATCH_META=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
+CONFIG_CAN=y
+CONFIG_CAN_RAW=y
+CONFIG_CAN_BCM=y
+CONFIG_CAN_GW=y
+CONFIG_CAN_VCAN=y
+CONFIG_CAN_PEAK_USB=y
+CONFIG_CAN_SAM4E_USB=y
+CONFIG_CAN_DEBUG_DEVICES=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
